--- a/INDEX.html
+++ b/INDEX.html
@@ -126,7 +126,7 @@ button {
   font-weight: bold;
 }
 </style>
-<link rel="me" href="https://www.blogger.com/profile/15124376530201403008" />
+<link rel="me" href="https://abhishekdj7017.github.io/TK-CLUB/" />
 <meta name='google-adsense-platform-account' content='ca-host-pub-1556223355139109'/>
 <meta name='google-adsense-platform-domain' content='blogspot.com'/>
 </head>
@@ -144,7 +144,7 @@ button {
     
     <img src="https://image2url.com/r2/default/images/1771609101371-44f5838c-5223-4610-8e82-300963fc888d.jpg" class="profile-pic">
     
-    <div class="title">✦ KEVIN BHAI ✦</div>
+    <div class="title">✦ ZIYA PREDICTION ✦</div>
 
     <div id="passPart">
       <input type="password" id="password" placeholder="Enter Password">
